Fix Vertical align

--- a/src/components/Layout/Footer.css
+++ b/src/components/Layout/Footer.css
@@ -7,15 +7,16 @@ body {
   main {
     flex: 1 0 auto;
   }
-  .page-footer{
-    position: fixed;
+   .page-footer{
+    /* position: fixed; */
+    
    left: 0;
    bottom: 0;
    width: 100%;
-   color: white;
    text-align:inherit;
-
    display: inline-block;
+   margin:0;
+   vertical-align:top;
 }
 
   @media only screen and (max-width: 320px) {
